--- a/views/protected.html
+++ b/views/protected.html
@@ -242,7 +242,7 @@
 })();
     </script>
 </head>
-<body sx-connect="/protected/events">
+<body sx-connect="/protected/events/{{ username }}">
     <div class="container">
         <h1 class="welcome">Welcome, {{ username }}!</h1>
         <p>You have successfully accessed the protected area.</p>
