--- a/views/login.html
+++ b/views/login.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Login</title>
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <style>
         body { font-family: Arial, sans-serif; margin: 50px; }
         .form-container { max-width: 400px; margin: 0 auto; }
